--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -32,9 +32,9 @@ window#waybar.hidden {
 }
 
 window > box {
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-top: 5px;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
 	background-color: rgb(30, 30, 46);
 	/* border-style: solid; */
 	/* border-width: 2px; */
@@ -81,6 +81,8 @@ tooltip label {
 #mode, #clock, #memory, #cpu, #idle_inhibitor, #temperature, #backlight, #pulseaudio, #network, #battery, #bluetooth, #mpd, #custom-gpu-usage, #custom-media, tray {
 	padding-left: 15px;
 	padding-right: 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 #mode {
