--- a/.config/eww/colors.scss
+++ b/.config/eww/colors.scss
@@ -3,9 +3,9 @@ $bg: #0d0f18;
 $contrastbg: #0f111a;
 $bgSecondary: #11131c;
 $bgSecondaryAlt: #a5b6cf;
-$fg: #a5b6cf;
-$fgDim: #a5b6cf;
-$watermelon: #dd6777;
+$fg: #CCCAC2;
+$fgDim: #CCCAC2;
+$watermelon: #F27983;
 
 // Aliases
 $background: $bg;
@@ -17,15 +17,15 @@ $foregroundDim: $fgDim;
 $black: #151720;
 $dimblack: #1a1c25;
 $lightblack: #262831;
-$red: #dd6777;
-$blue: #86aaec;
-$cyan: #93cee9;
-$blue-desaturated: #93cee9;
-$magenta: #c296eb;
-$purple: #c296eb;
-$green: #90ceaa;
-$aquamarine: #90ceaa;
-$yellow: #ecd3a0;
+$red: #F27983;
+$blue: #80BFFF;
+$cyan: #95E6CB;
+$blue-desaturated: #95E6CB;
+$magenta: #DFBFFF;
+$purple: #DFBFFF;
+$green: #87D96C;
+$aquamarine: #87D96C;
+$yellow: #FFD173;
 $accent: $blue;
-$javacafeMagenta: #c296eb;
-$javacafeBlue: #86aaec;
+$javacafeMagenta: #DFBFFF;
+$javacafeBlue: #80BFFF;
