--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -3,15 +3,14 @@
 	font-size: 14px;
 	font-weight: bold;
 	color: #CCCAC2;
-	border-radius: 10px;
 	transition-property: background-color;
 	transition-duration: 0.5s;
 }
 
 @keyframes blink_red {
     to {
-        background-color: rgb(242, 143, 173);
-        color: rgb(26, 24, 38);
+        background-color: #FF6666;
+        /* color: rgb(26, 24, 38); */
     }
 }
 
@@ -32,12 +31,13 @@ window#waybar.hidden {
 }
 
 window > box {
-	margin-left: 10px;
-	margin-right: 10px;
-	padding-left: 5px;
-	padding-right: 5px;
-	margin-top: 10px;
-	background-color: rgb(30, 30, 46);
+	border-radius: 10px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	background-color: rgba(23, 27, 36, 1);
 	/* border-style: solid; */
 	/* border-width: 2px; */
 	/* border-color: rgb(171, 233, 179); */
