--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -31,13 +31,13 @@ window#waybar.hidden {
 }
 
 window > box {
-	border-radius: 10px;
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-top: 5px;
+	/* border-radius: 10px; */
+	/* margin-left: 5px; */
+	/* margin-right: 5px; */
+	/* margin-top: 5px; */
 	padding-left: 10px;
 	padding-right: 10px;
-	background-color: rgba(23, 27, 36, 1);
+	background-color: rgba(23, 27, 36, 0.9);
 	/* border-style: solid; */
 	/* border-width: 2px; */
 	/* border-color: rgb(171, 233, 179); */
