--- a/.config/eww/colors.scss
+++ b/.config/eww/colors.scss
@@ -1,11 +1,10 @@
-$darkbg: #0b0d16;
-$bg: #0d0f18;
+$darkbg: #0B0E14;
+$bg: #0D1017;
 $contrastbg: #0f111a;
 $bgSecondary: #11131c;
 $bgSecondaryAlt: #a5b6cf;
-$fg: #CCCAC2;
-$fgDim: #CCCAC2;
-$watermelon: #F27983;
+$fg: #BFBDB6;
+$fgDim: #565B66;
 
 // Aliases
 $background: $bg;
@@ -25,7 +24,7 @@ $magenta: #DFBFFF;
 $purple: #DFBFFF;
 $green: #87D96C;
 $aquamarine: #87D96C;
-$yellow: #FFD173;
+$yellow: #FFB454;
 $accent: $blue;
 $javacafeMagenta: #DFBFFF;
 $javacafeBlue: #80BFFF;
