style(waybar, hypr)

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: iA Writer Duospace, "Font Awesome 6 Pro";
+  font-family: Iosevka Term, "Font Awesome 6 Pro";
   font-size: 14px;
   font-weight: bold;
   color: #bfbdb6;
