--- a/.config/eww/music/music.scss
+++ b/.config/eww/music/music.scss
@@ -1,3 +1,7 @@
+* {
+  border-radius: 10px;
+}
+
 .musicbox {
   .pic-container {
     .picbox {
@@ -6,7 +10,6 @@
       background-repeat: no-repeat;
       min-height: 500px;
       min-width: 500px;
-      border-radius: 7px;
       padding: 10px;
     }
     // i've to make it hidden, so i'll translate it to the INFINITE! LMFAO
@@ -14,29 +17,18 @@
       margin-top: -100px;
     }
   }
-  .musiccontrolsbox {
-    background-color: $bgSecondary;
-    border-radius: 7px;
-    padding: 7px 15px;
-    font-family: Iosevka;
-    .previousbutton, .nextbutton {
-      font-size: 23px;
-    }
-    .pausebutton {
-      padding: 0px 10px 0px 4px;
-    }
-  }
 }
 
 .title {
-    font-size: 1.5em;
-    font-weight: 800;
+  font-size: 1.75em;
+  font-weight: 800;
+  font-family: Iosevka;
 }
 
 .artist {
-    font-size: 1.1em;
+  font-size: 1em;
 }
 
 .album {
-    font-style: italic;
+  font-style: italic;
 }
