--- a/.config/eww/scss/powermenu.scss
+++ b/.config/eww/scss/powermenu.scss
@@ -1,25 +1,31 @@
-.powermenu {
-    @include window;
-    min-width: 20rem;
+.powermenu-box {
+  @include window;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.powermenu-entry {
+  margin: 0 0.5rem;
 }
 
 .powermenu-button {
-    background-color: $surfaceVariant;
-    color: $onSurface;
-    padding: 0.25rem;
-    font-size: 1.1rem;
-    margin-top: 0.5rem;
-    border-radius: 10px;
-    min-height: 2rem;
-    transition: 0.3s;
+  background-color: $surfaceVariant;
+  border-radius: 1rem;
+  transition: 0.3s;
+  padding: 3.25rem 4rem;
 }
 
 .powermenu-button:hover {
-    background-color: $primary;
-    color: $surface;
+  background-color: mix($surfaceVariant, $onSurfaceVariant, 70%);
 }
 
 .powermenu-icon {
-    min-width: 2.5rem;
-    font-size: 1.3rem;
+  font-size: 4rem;
+}
+
+.powermenu-text {
+  margin-top: 0.5rem;
+  font-size: 1.3rem;
 }
