--- a/.config/ags/scss/variables.scss
+++ b/.config/ags/scss/variables.scss
@@ -5,7 +5,7 @@ $hover: transparentize($_widget-bg, ($widget-opacity * 0.9) / 100);
 $widget-bg: transparentize($_widget-bg, $widget-opacity / 100);
 $active-gradient: linear-gradient($accent-gradient);
 
-$hover-fg: if($color-scheme == 'dark', lighten($fg-color, 10%), darken($fg-color, 8%));
+$hover-fg: if($color-scheme =='dark', lighten($fg-color, 10%), darken($fg-color, 8%));
 
 $border-color: transparentize($_border-color, $border-opacity / 100);
 $border: $border-width solid $border-color;
@@ -14,10 +14,13 @@ $text-shadow: 2px 2px 2px $shadow;
 
 $popover-border-color: transparentize($_border-color, max(($border-opacity - 1) / 100, 0));
 $popover-padding: $padding * $popover-padding-multiplier;
-$popover-radius: if($radii == 0, 0, $radii + $popover-padding);
+$popover-radius: if($radii ==0, 0, $radii + $popover-padding);
 
 $wm-gaps: floor($spacing * $wm-gaps-multiplier);
 
 $shader-fg: #fff;
 
-* { font-size: $font-size; }
+* {
+    font-size: $font-size;
+    font-family: 'Iosevka', 'Symbols Nerd Font';
+}
