--- a/.config/ags/scss/widgets/bar.scss
+++ b/.config/ags/scss/widgets/bar.scss
@@ -1,79 +1,96 @@
 $bar-spacing: $spacing / 2;
-$button-radius: if($bar-style == 'floating', max(0, $radii - $bar-spacing), $radii);
+$button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radii);
 
-@mixin panel-button($flat: $bar-flat-buttons, $reactive: true){
+@mixin panel-button($flat: $bar-flat-buttons, $reactive: true) {
     @include unset;
 
-    @if $bar-style == 'separated' {
+    @if $bar-style =='separated' {
         transition: $transition;
 
-        > * {
+        >* {
             @include floating-widget;
             border-radius: $radii;
             margin: $wm-gaps $bar-spacing;
             transition: $transition;
         }
 
-        &:hover > * {
+        &:hover>* {
             color: $hover-fg;
 
             @if $drop-shadow {
                 box-shadow: 0 0 min(6px, $spacing/2) 0 $shadow,
                     inset 0 0 0 99px $hover;
-            } @else {
+            }
+
+            @else {
                 box-shadow: inset 0 0 0 99px $hover;
             }
         }
 
-        &:active > *, &.active > * {
-            label, image { color: $accent-fg; }
+        &:active>*,
+        &.active>* {
+
+            label,
+            image {
+                color: $accent-fg;
+            }
+
             background-image: $active-gradient;
             background-color: $accent;
         }
-    } @else {
+    }
+
+    @else {
         @include accs-button($flat, $reactive);
 
-        > * {
+        >* {
             border-radius: $button-radius;
             margin: $bar-spacing;
         }
     }
 
-    label, image {
+    label,
+    image {
         font-weight: bold;
     }
 
-    > * {
+    label {
+        margin: 0 5px; // Maybe...
+    }
+
+    >* {
         padding: $padding * 0.4 $padding * 0.8;
     }
 }
 
 .panel {
-    @if $bar-style == 'normal' {
+    @if $bar-style =='normal' {
         background-color: $bg-color;
     }
 
-    @if not $screen-corners and $bar-style == 'normal' {
-        @if $bar-position == 'bottom' {
+    @if not $screen-corners and $bar-style =='normal' {
+        @if $bar-position =='bottom' {
             border-top: $border;
-        } @else {
+        }
+
+        @else {
             border-bottom: $border;
         }
     }
 
-    @if $bar-style == 'floating' {
+    @if $bar-style =='floating' {
         @include floating-widget;
         border-radius: $radii;
         margin: $wm-gaps;
         padding: 0;
     }
 
-    @if $bar-style == 'separated' {
-        > .end > button:last-child > * {
+    @if $bar-style =='separated' {
+        >.end>button:last-child>* {
             margin-right: $wm-gaps;
         }
 
-        > .start > button:first-child > * {
+        >.start>button:first-child>* {
             margin-left: $wm-gaps;
         }
     }
@@ -82,7 +99,8 @@ $button-radius: if($bar-style == 'floating', max(0, $radii - $bar-spacing), $rad
         @include panel-button;
     }
 
-    .tray-item, .color-picker {
+    .tray-item,
+    .color-picker {
         @include panel-button($flat: true);
     }
 
@@ -94,50 +112,91 @@ $button-radius: if($bar-style == 'floating', max(0, $radii - $bar-spacing), $rad
     }
 
     .overview {
-        label { color: transparentize($accent, 0.2); }
-        &:hover label { color: $accent; }
-        &:active label, &.active label { color: $accent-fg; }
+        label {
+            color: transparentize($accent, 0.2);
+        }
+
+        &:hover label {
+            color: $accent;
+        }
+
+        &:active label,
+        &.active label {
+            color: $accent-fg;
+        }
     }
 
-    .powermenu, .recorder {
-        image { color: transparentize($red, 0.3); }
-        &:hover image { color: transparentize($red, 0.15); }
-        &:active image { color: $red; }
+    .powermenu,
+    .recorder {
+        image {
+            color: transparentize($red, 0.3);
+        }
+
+        &:hover image {
+            color: transparentize($red, 0.15);
+        }
+
+        &:active image {
+            color: $red;
+        }
     }
 
-    .focused-client > box > box,
-    .quicksettings > box > box {
-        @include spacing($spacing: if($bar-spacing == 0, $padding / 2, $bar-spacing));
+    .focused-client>box>box,
+    .quicksettings>box>box {
+        @include spacing($spacing: if($bar-spacing ==0, $padding / 2, $bar-spacing));
     }
 
     /* stylelint-disable-next-line selector-not-notation */
     .quicksettings:not(.active):not(:active) {
-        .bluetooth { color: $blue; }
+        .bluetooth {
+            color: $blue;
+        }
 
         .battery {
-            &.low { color: $red; }
-            &.charged, &.charging { color: $green; }
+            &.low {
+                color: $red;
+            }
+
+            &.charged,
+            &.charging {
+                color: $green;
+            }
         }
     }
 
     .media {
-        &.spotify image { color: $green; }
-        &.firefox image { color: $orange; }
-        &.mpv image { color: $magenta; }
+        &.spotify image {
+            color: $green;
+        }
+
+        &.firefox image {
+            color: $orange;
+        }
+
+        &.mpv image {
+            color: $magenta;
+        }
     }
 
     .notifications {
-        image { color: $yellow; }
+        image {
+            color: $yellow;
+        }
     }
 
     .battery-bar {
-        .font-icon { font-size: 1.15em; }
-
-        @if $battery-bar-full {
-            > box { padding: 0; }
+        .font-icon {
+            font-size: 1.15em;
         }
 
-        image, .font-icon {
+        @if $battery-bar-full {
+            >box {
+                padding: 0;
+            }
+        }
+
+        image,
+        .font-icon {
             margin-right: $bar-spacing * .5;
         }
 
@@ -153,17 +212,32 @@ $button-radius: if($bar-style == 'floating', max(0, $radii - $bar-spacing), $rad
         }
 
         @mixin color($color) {
-            image, label { color: $color }
+
+            image,
+            label {
+                color: $color
+            }
 
             block.filled {
                 background-image: linear-gradient(to right, $color, lighten($color, 6%));
             }
         }
 
-        .medium { @include color($yellow) }
-        .low { @include color($red) }
-        .charging { @include color($green) }
-        &:active { @include color($accent-fg) }
+        .medium {
+            @include color($yellow)
+        }
+
+        .low {
+            @include color($red)
+        }
+
+        .charging {
+            @include color($green)
+        }
+
+        &:active {
+            @include color($accent-fg)
+        }
 
         .whole-button {
             label {
@@ -171,12 +245,15 @@ $button-radius: if($bar-style == 'floating', max(0, $radii - $bar-spacing), $rad
                 text-shadow: $text-shadow;
             }
 
-            trough, block.filled {
+            trough,
+            block.filled {
                 border-radius: $button-radius;
             }
 
-            @if $bar-style == 'separated' {
-                trough { border: none; }
+            @if $bar-style =='separated' {
+                trough {
+                    border: none;
+                }
             }
         }
     }
@@ -205,7 +282,8 @@ $button-radius: if($bar-style == 'floating', max(0, $radii - $bar-spacing), $rad
             box-shadow: inset 0 0 0 10px transparentize($fg-color, 0.8);
         }
 
-        &.active .indicator, &:active .indicator {
+        &.active .indicator,
+        &:active .indicator {
             background-color: $accent;
         }
 
