style(ags): colors, layout and fonts

--- a/.config/ags/scss/variables.scss
+++ b/.config/ags/scss/variables.scss
@@ -22,5 +22,5 @@ $shader-fg: #fff;
 
 * {
     font-size: $font-size;
-    font-family: 'Iosevka', 'Symbols Nerd Font';
+    font-family: 'Iosevka';
 }
