--- a/.config/ags/scss/widgets/bar.scss
+++ b/.config/ags/scss/widgets/bar.scss
@@ -170,7 +170,7 @@ $button-radius: if($bar-style =='floating', max(0, $radii - $bar-spacing), $radi
         }
 
         &.firefox image {
-            color: $orange;
+            color: $cyan;
         }
 
         &.mpv image {
