--- a/.config/ags/scss/widgets/notifications.scss
+++ b/.config/ags/scss/widgets/notifications.scss
@@ -1,6 +1,6 @@
 @mixin notification() {
     &.critical>box {
-        box-shadow: inset 0 0 .5em 0 $red;
+        border: 2px solid $red;
     }
 
     &:hover button.close-button {
@@ -13,6 +13,7 @@
             margin-right: $spacing;
             color: $fg-color;
             font-size: 1.1em;
+            font-weight: bold;
         }
 
         .time {
@@ -20,7 +21,7 @@
         }
 
         .description {
-            font-size: .9em;
+            font-size: 1em;
             color: transparentize($fg-color, .2);
         }
 
