--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -35,7 +35,7 @@ window#waybar.hidden {
 window>box {
   /* border-radius: 10px; */
   padding: 0px 20px;
-  background-color: #0b0e14;
+  background-color: #091613;
 }
 
 tooltip {
